--- a/JavascriptLearning/Projects/todoList/main.css
+++ b/JavascriptLearning/Projects/todoList/main.css
@@ -1,15 +1,29 @@
 body {
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;  
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    padding:0;
+    margin:0;  
 }
 
 .wrapper {
     display: flex; 
+    flex-direction: column;
     min-height: 100vh;
 }
 
-nav {
-    background-color: midnightblue;
+header {
     color: white;
+    background-color: orange;    
+    padding-left: 30px;
+}
+
+.content {
+    display: flex;
+    flex: 1;
+}
+
+nav {
+    background-color: rgb(243, 232, 172);
+    color: black;
     flex-basis: 200px;
     text-align: center;  
     display: flex;  
@@ -23,12 +37,16 @@ nav ul {
     margin-top: 40px;
 }
 
-nav ul li {
-    margin-top: 20px;
+nav > ul > li {
+    margin-top: 20px;    
+}
+
+nav > ul > li:hover {    
+    cursor: pointer;
 }
 
 
-nav h2 {
+nav > h2 {
     margin: 5px;
     font-size: 40px;    
 }
@@ -41,6 +59,10 @@ main {
 
 ul {    
     list-style-type: none;    
+}
+
+main > ul > li {
+    padding-bottom: 20px;
 }
 
 .completed {
