--- a/codeCampProjects/reactProjects/1_random-quotes/index.css
+++ b/codeCampProjects/reactProjects/1_random-quotes/index.css
@@ -7,13 +7,19 @@ body {
   justify-content: center;
   align-content: center;
   align-items: center;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
+h1 {
+  font-weight: 400;
 }
 
 .rootClass {
   background-color: white;
   border-radius: 4px;
   padding: 30px;
-  color: rgb(19, 34, 82);
+  color: rgb(19, 34, 82); 
+  max-width: 25vw
 }
 
 button {
@@ -22,4 +28,22 @@ button {
   color: white;
   border-style: none;
   padding: 10px;
+}
+
+#bottom-bar {
+  display: flex;
+  justify-content: space-between;
+}
+
+#twitter-icon {
+  background-color: rgb(19, 34, 82);
+  color: white;
+  padding: 4px;
+  border-radius: 6px;
+  font-size: 2.5em;
+}
+
+#author {
+  margin-bottom: 40px;
+  
 }
