fixed formatting on markdown previewer

--- a/codeCampProjects/reactProjects/2_markdown-previewer/index.css
+++ b/codeCampProjects/reactProjects/2_markdown-previewer/index.css
@@ -74,3 +74,11 @@
     font-size: 1rem;    
     flex-direction: column;    
   }
+
+ul {
+  padding-left: 35px;
+}
+
+h1 {
+  padding-bottom: 15px;
+}
