updated calculator logic

--- a/codeCampProjects/reactProjects/4_javascript-calculator/index.css
+++ b/codeCampProjects/reactProjects/4_javascript-calculator/index.css
@@ -10,11 +10,7 @@ body {
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
-h1 {
-  
-}
-
-.rootClass {
+#calculator {
   background-color: white;
   border-radius: 4px;
   padding: 30px;
