--- a/codeCampProjects/reactProjects/4_javascript-calculator/index.css
+++ b/codeCampProjects/reactProjects/4_javascript-calculator/index.css
@@ -13,8 +13,133 @@ body {
 #calculator {
   background-color: white;
   border-radius: 4px;
-  padding: 30px;
-  color: rgb(19, 34, 82); 
-  max-width: 25vw
+  padding: 10px;
+  color: rgb(19, 34, 82);   
+  width: 320px;  
 }
+
+#displayApp {
+  padding: 5px;
+  font-size: 20px;  
+  text-align: right;
+}
+
+#display {
+  height: 35px;
+}
+
+#formula {
+  height: 35px;
+}
+
+button {
+  border:none;
+}
+
+.number {
+  color: white;
+  background-color: rgb(78, 78, 78);
+}
+
+.operand {
+  color: white;
+  background-color: grey;
+}
+
+#calculatorButtons {  
+  height: 350px;
+  display: grid;  
+  grid-gap: 1px;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+}
+
+#clear {
+  grid-column: 1 / 3;
+  grid-row: 1;
+  color: white;
+  background-color:rgb(189, 67, 67);
+}
+
+#divide {
+  grid-column: 3 ;
+  grid-row: 1 / 2;
+} 
+
+#multiply {
+  grid-column: 4 ;
+  grid-row: 1 / 2;
+} 
+
+#add {
+  grid-column: 4 ;
+  grid-row: 3 / 3;
+} 
+
+#subtract {
+  grid-column: 4 ;
+  grid-row: 2 / 2;
+}
+
+#equals {
+  grid-column: 4;
+  grid-row: 4 / 6;
+  color: white;
+  background-color: rgb(66, 66, 219);
+}
+
+#decimal {
+  grid-column: 3;
+  grid-row: 5;
+}
+
+#one {
+  grid-column: 1 ;
+  grid-row: 4;
+} 
+
+#two {
+  grid-column: 2 ;
+  grid-row: 4;
+} 
+
+#three {
+  grid-column: 3 ;
+  grid-row: 4;
+} 
+
+#four {
+  grid-column: 1 ;
+  grid-row: 3;
+} 
+
+#five {
+  grid-column: 2 ;
+  grid-row: 3;
+} 
+
+#six {
+  grid-column: 3 ;
+  grid-row: 3;
+} 
+
+#seven {
+  grid-column: 1 ;
+  grid-row: 2;
+} 
+
+#eight {
+  grid-column: 2 ;
+  grid-row: 2;
+} 
+
+#nine {
+  grid-column: 3 ;
+  grid-row: 2;
+}
+
+#zero {
+  grid-column: 1 / 3;
+  grid-row: 5
+}
+
 
