completed clock logic on pomodoro clock

--- a/codeCampProjects/reactProjects/5_pomodoro-clock/index.css
+++ b/codeCampProjects/reactProjects/5_pomodoro-clock/index.css
@@ -8,8 +8,9 @@ body {
   align-content: center;
   align-items: center;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  color: gold;
 }
 
-#controls {
+.controls {
   display: flex;
 }
